<resources>
    <string name="app_name">Mercedes Seat</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="page_1_button">page 1 button</string>
    <string name="page_2_button">page_2_button</string>
    <string name="page_3_button">page_3_button</string>
    <string name="intensit_t">Intensität</string>

    <string name="byte_min">-128</string>
    <string name="byte_max">"127"</string>
    <string name="motorpointein">motorpoinein:drawable/</string>
    <string name="togglebutton">ToggleButton</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="einatmen">Einatmen</string>
    <string name="ausatmen">Ausatmen</string>
    <string name="tallPerson">Große Person</string>
    <string name="littlePerson">Kleine Person</string>

    <string name="phase1">Phase 1</string>
    <string name="phase2">Phase 2</string>
    <string name="phase3">Phase 3</string>
    <string name="add">Hinzufügen</string>
    <string name="change">Wechsel</string>
    <string name="dauerAn">Dauer An</string>
    <string name="pulse">Pulsierend</string>
    <string name="speed">Speed:</string>
    <string name="time">Time:</string>
    <string name="intit">Intensity:</string>
    <string name="button">Button</string>

</resources>